--- a/Recipe/recipe.css
+++ b/Recipe/recipe.css
@@ -2,6 +2,20 @@ body{
     background: maroon;
 }
 .recipe-image{
-    background: orange;
-    
+    background: darkolivegreen;
+
+}
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
+
+.centerforText {
+    display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 30%;
+  text-align: center;
 }
