--- a/Recipe/recipe.css
+++ b/Recipe/recipe.css
@@ -37,13 +37,30 @@ ul {
   }
 }
 
-@media (min-width: 1081px) {
+/* @media (min-width: 1081px) {
   body {
     background-color: rgb(255, 255, 255);
   }
 }
-@media (min-width: 1200px) {
+@media (max-width: 1200px) {
   body {
     background-color: rgb(209, 142, 194);
+  }
+} */
+
+
+@media (max-width: 1100px) {
+  body {
+    background-color:pink;
+  }
+  #tiktokembed { 
+      width: auto;
+      height: auto;
+  }
+}
+
+@media (max-width: 800px) {
+  body {
+    background-color:white;
   }
 }
