--- a/Profile/profile.css
+++ b/Profile/profile.css
@@ -31,5 +31,14 @@
 
 
 
+img {
+    border-radius: 50%;
+    width:10em; 
+    height:10em;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
 
 
