--- a/Profile/profile.css
+++ b/Profile/profile.css
@@ -50,3 +50,9 @@ img {
    
     
 }
+
+
+body {
+    background-image: url("https://images.pexels.com/photos/7130560/pexels-photo-7130560.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2");
+    background-color: #cccccc;
+   }
