made changes with Vladimir

--- a/Profile/profile.css
+++ b/Profile/profile.css
@@ -1,12 +1,16 @@
 #container1{
     display: flex; /* This sets up flexbox for us on the big div container that holds our 3 boxes */
-    justify-content: space-around;
-    
+    justify-content: space-evenly
+  
 }
 
 #container1 div{
-    border: 2px rgb(0, 0, 0) solid;  /* did a border aroound our container div so we can see it  */
-    padding: 10px
+    border: 2px rgb(171, 171, 171) solid;  /* did a border aroound our container div so we can see it  */
+    padding: 40px;
+    background-color: white;
+    box-shadow: 20px 20px 20px 11px rgb(210 132 214);
+    border-radius: 65px;
+    width:20%
     
 }
 
@@ -41,6 +45,16 @@ img {
   #container2{
     display: flex; 
     justify-content: space-around;
+    border: 2px rgb(171, 171, 171) solid;
+    padding: 60px;
+    background-color: white;
+    box-shadow: 20px 20px 20px 11px rgb(210 132 214);
+    border-radius: 65px;
+    margin-top: 45px;
+    width: 75%;
+    margin-left: auto;
+    margin-right: auto;
+
     
 }
 
@@ -56,3 +70,12 @@ body {
     background-image: url("https://images.pexels.com/photos/7130560/pexels-photo-7130560.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2");
     background-color: #cccccc;
    }
+
+
+label, input {  /* This is used to fix my input labels so they go above the input field */
+    display: block;
+}
+
+label {
+    margin-bottom: 20px;
+}
