added a background gradient to my Social Media text

--- a/Profile/profile.css
+++ b/Profile/profile.css
@@ -96,6 +96,11 @@ i {
 h3 {
     text-align: center;
     /* margin-top: -240px; */
+    background: linear-gradient(to bottom left, #553c9a, #d56ec3);
+
+    
+    
+
 }
 
 #bottommiddlediv {
