--- a/Game/Game.css
+++ b/Game/Game.css
@@ -1,4 +1,8 @@
-.coinpic{
-    width: 10px;
-    height: 10px
+
+
+#scorediv{
+ border-style:solid;
+ border-color: black;
+ width: 300px;
+ height: 70px
 }
