--- a/Game/Game.css
+++ b/Game/Game.css
@@ -1,10 +1,11 @@
 
+body {background-color: rgb(173, 222, 165);}
 
-#scorediv{
- border-style:solid;
- border-color: black;
- width: 300px;
- height: 70px
+
+
+#coinpic{
+    width: 40%;
+    height: 50%
 }
 
 #flipbuttondiv{
