--- a/Game2/src/Card.css
+++ b/Game2/src/Card.css
@@ -3,11 +3,15 @@
     border-width: 5px;
     border-color: black;
     border-style: solid;
-    padding: 80px;   
-    margin: 35%; 
+    padding: 15px;   
+    margin: 10px; 
     
 }
 
 .cardcontainer{
     width: 25%;
+}
+
+.cardimage{
+    width: 100%;
 }
