--- a/Game2/src/App.css
+++ b/Game2/src/App.css
@@ -46,3 +46,12 @@
   /* border-left: 50px;
   border-right: 50px; */
 }
+
+#title{
+  display: block;
+  width: 100%;
+  margin-top: 50px;
+  height: 175px;
+  float:inline-end;
+  color:rgb(84, 57, 104);
+}
