--- a/Game2/src/App.css
+++ b/Game2/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  
 }
 
 .App-logo {
@@ -54,4 +55,69 @@
   height: 175px;
   float:inline-end;
   color:rgb(84, 57, 104);
+    font-family:"Montserrat",
+      sans-serif;
+      font-weight: 800;
+      font-size: 8.5vw;
+}
+
+
+
+/* Adjusting font: */
+.title-word {
+  animation: color-animation 4s linear infinite;
+}
+
+.title-word-1 {
+  --color-1: #a390b7;
+  --color-2: #3D8DAE;
+  --color-3: #db78b0;
+}
+
+.title-word-2 {
+  --color-1: #7b419f;
+  --color-2: #ACCFCB;
+  --color-3: #17494D;
+}
+
+.title-word-3 {
+  --color-1: #ACCFCB;
+  --color-2: #E4A9A8;
+  --color-3: #ACCFCB;
+}
+
+.title-word-4 {
+  --color-1: #3D8DAE;
+  --color-2: #74a4d4;
+  --color-3: #E4A9A8;
+}
+
+@keyframes color-animation {
+  0% {
+    color: var(--color-1)
+  }
+
+  32% {
+    color: var(--color-1)
+  }
+
+  33% {
+    color: var(--color-2)
+  }
+
+  65% {
+    color: var(--color-2)
+  }
+
+  66% {
+    color: var(--color-3)
+  }
+
+  99% {
+    color: var(--color-3)
+  }
+
+  100% {
+    color: var(--color-1)
+  }
 }
