--- a/week8Game/client/src/App.css
+++ b/week8Game/client/src/App.css
@@ -7,7 +7,8 @@
 }
 
 .textHeader{
-  align-self: center;
+  /* align-self: center; */
+  text-align: center;
 }
 
 .ListMain{
@@ -38,4 +39,15 @@
 
   width: 70%;
 
+}
+
+#image{
+  display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 55%;
+}
+
+#sendbutton{
+  background-color: #90b6cd;
 }
