--- a/week8Game/client/src/App.css
+++ b/week8Game/client/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  background-color: #eaeff1;
+  background-color: #c1deea;
   font-family: "Raleway", sans-serif;
   display:flex; 
   flex-direction:column; 
@@ -24,8 +24,12 @@ text-shadow: 1px 1px 2px rgb(61, 165, 192);
 
 .Container {
   display: table-cell;
-  vertical-align: middle;
-  align-self: center;
+  /* vertical-align: middle; */
+  /* align-self: center; */
+  display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
 }
 
 .question-section{
@@ -66,4 +70,17 @@ text-shadow: 1px 1px 2px rgb(61, 165, 192);
 
 input{
   width: 75%;
+}
+
+.font{
+  text-align: center;
+    font-size: large;
+    color: rgb(16, 91, 91);
+    text-shadow: 1px 1px 2px rgb(61, 165, 192);
+}
+
+#sendText{
+  color: rgb(7, 39, 66);
+  text-shadow: 1px 1px 2px rgb(61, 165, 192);
+  font-weight: bold;
 }
