--- a/week8Game/client/src/App.css
+++ b/week8Game/client/src/App.css
@@ -65,7 +65,7 @@
     padding: 12px 20px;
     margin: 8px 0;
     box-sizing: border-box;
-    background-color: #add5cd;
+    background-color: rgb(129, 167, 198);
     border-radius: 20px;
 }
 
