--- a/week8Game/client/src/App.css
+++ b/week8Game/client/src/App.css
@@ -29,7 +29,8 @@
   display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
+    width: 60%;
+    padding-left: 20%;
 }
 
 .question-section{
