--- a/week8Game/client/src/App.css
+++ b/week8Game/client/src/App.css
@@ -74,12 +74,20 @@ input{
   width: 75%;
 }
 
-.font{
+.fonttop{
   text-align: center;
     font-size: large;
     color: rgb(16, 91, 91);
     text-shadow: 1px 1px 2px rgb(61, 165, 192);
   padding-left: 20%;
+}
+
+.fontbottom {
+  text-align: center;
+  font-size: large;
+  color: rgb(16, 91, 91);
+  text-shadow: 1px 1px 2px rgb(61, 165, 192);
+  padding-left: 10%;
 }
 
 #sendText{
